basement/09-swagger/02-swagger-ui.yaml
kind: Service
apiVersion: v1
metadata:
  name: swagger-ui
  namespace: default
spec:
  selector:
    app: swagger-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 31890

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
  namespace: default
  labels:
    app: swagger-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
        - name: swagger-ui
          image: swaggerapi/swagger-ui
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: json
              mountPath: /usr/share/nginx/html/data
      volumes:
        - name: json
          persistentVolumeClaim:
            claimName: swagger-ui-pvc
