basement/09-swagger/03-traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: strip-swagger-ui-prefix
spec:
  stripPrefix:
    prefixes:
      - /test/swaggerui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: nft-meta-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-swagger-ui-prefix@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /test/swaggerui
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 31890
